--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: Inter;
+  --font-mono: Fira Code;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -41,75 +41,142 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --font-serif: Lora;
+  --radius: 1.0rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --shadow-2xl: var(--shadow-2xl);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-md: var(--shadow-md);
+  --shadow: var(--shadow);
+  --shadow-sm: var(--shadow-sm);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-2xs: var(--shadow-2xs);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
+  --color-destructive-foreground: var(--destructive-foreground);
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: hsl(0 0% 98%);
-  --sidebar-foreground: hsl(240 5.3% 26.1%);
-  --sidebar-primary: hsl(240 5.9% 10%);
-  --sidebar-primary-foreground: hsl(0 0% 98%);
-  --sidebar-accent: hsl(240 4.8% 95.9%);
-  --sidebar-accent-foreground: hsl(240 5.9% 10%);
-  --sidebar-border: hsl(220 13% 91%);
-  --sidebar-ring: hsl(217.2 91.2% 59.8%);
+  --radius: 1.0rem;
+  --background: oklch(0.9898 0.0042 56.3765);
+  --foreground: oklch(0.3958 0.0465 3.0622);
+  --card: oklch(1.0000 0 0);
+  --card-foreground: oklch(0.3958 0.0465 3.0622);
+  --popover: oklch(1.0000 0 0);
+  --popover-foreground: oklch(0.3958 0.0465 3.0622);
+  --primary: oklch(0.7766 0.0861 15.5812);
+  --primary-foreground: oklch(0.3958 0.0465 3.0622);
+  --secondary: oklch(0.8248 0.0291 318.6845);
+  --secondary-foreground: oklch(0.3958 0.0465 3.0622);
+  --muted: oklch(0.9176 0.0345 42.6981);
+  --muted-foreground: oklch(0.5291 0.0639 8.5509);
+  --accent: oklch(0.9449 0.0221 63.2017);
+  --accent-foreground: oklch(0.3958 0.0465 3.0622);
+  --destructive: oklch(0.6368 0.2078 25.3313);
+  --border: oklch(0.9449 0.0221 63.2017);
+  --input: oklch(0.9449 0.0221 63.2017);
+  --ring: oklch(0.7766 0.0861 15.5812);
+  --chart-1: oklch(0.7766 0.0861 15.5812);
+  --chart-2: oklch(0.8248 0.0291 318.6845);
+  --chart-3: oklch(0.8568 0.0388 355.2216);
+  --chart-4: oklch(0.8925 0.0497 16.5865);
+  --chart-5: oklch(0.9176 0.0345 42.6981);
+  --sidebar: oklch(1.0000 0 0);
+  --sidebar-foreground: oklch(0.3958 0.0465 3.0622);
+  --sidebar-primary: oklch(0.7766 0.0861 15.5812);
+  --sidebar-primary-foreground: oklch(0.3958 0.0465 3.0622);
+  --sidebar-accent: oklch(0.9449 0.0221 63.2017);
+  --sidebar-accent-foreground: oklch(0.3958 0.0465 3.0622);
+  --sidebar-border: oklch(0.9449 0.0221 63.2017);
+  --sidebar-ring: oklch(0.7766 0.0861 15.5812);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --font-sans: Inter;
+  --font-serif: Lora;
+  --font-mono: Fira Code;
+  --shadow-color: #999999;
+  --shadow-opacity: 0.1;
+  --shadow-blur: 8px;
+  --shadow-spread: -2px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: 0px;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 60% / 0.05);
+  --shadow-xs: 0px 4px 8px -2px hsl(0 0% 60% / 0.05);
+  --shadow-sm: 0px 4px 8px -2px hsl(0 0% 60% / 0.10), 0px 1px 2px -3px hsl(0 0% 60% / 0.10);
+  --shadow: 0px 4px 8px -2px hsl(0 0% 60% / 0.10), 0px 1px 2px -3px hsl(0 0% 60% / 0.10);
+  --shadow-md: 0px 4px 8px -2px hsl(0 0% 60% / 0.10), 0px 2px 4px -3px hsl(0 0% 60% / 0.10);
+  --shadow-lg: 0px 4px 8px -2px hsl(0 0% 60% / 0.10), 0px 4px 6px -3px hsl(0 0% 60% / 0.10);
+  --shadow-xl: 0px 4px 8px -2px hsl(0 0% 60% / 0.10), 0px 8px 10px -3px hsl(0 0% 60% / 0.10);
+  --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 60% / 0.25);
+  --tracking-normal: 0px;
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: hsl(240 5.9% 10%);
-  --sidebar-foreground: hsl(240 4.8% 95.9%);
-  --sidebar-primary: hsl(224.3 76.3% 48%);
-  --sidebar-primary-foreground: hsl(0 0% 100%);
-  --sidebar-accent: hsl(240 3.7% 15.9%);
-  --sidebar-accent-foreground: hsl(240 4.8% 95.9%);
-  --sidebar-border: hsl(240 3.7% 15.9%);
-  --sidebar-ring: hsl(217.2 91.2% 59.8%);
+  --background: oklch(0.2507 0.0241 5.7160);
+  --foreground: oklch(0.9449 0.0221 63.2017);
+  --card: oklch(0.3245 0.0370 0.3174);
+  --card-foreground: oklch(0.9449 0.0221 63.2017);
+  --popover: oklch(0.3245 0.0370 0.3174);
+  --popover-foreground: oklch(0.9449 0.0221 63.2017);
+  --primary: oklch(0.7766 0.0861 15.5812);
+  --primary-foreground: oklch(0.3958 0.0465 3.0622);
+  --secondary: oklch(0.8248 0.0291 318.6845);
+  --secondary-foreground: oklch(0.3245 0.0370 0.3174);
+  --muted: oklch(0.3958 0.0465 3.0622);
+  --muted-foreground: oklch(0.8568 0.0388 355.2216);
+  --accent: oklch(0.3958 0.0465 3.0622);
+  --accent-foreground: oklch(0.9449 0.0221 63.2017);
+  --destructive: oklch(0.3958 0.1331 25.7230);
+  --border: oklch(0.3958 0.0465 3.0622);
+  --input: oklch(0.3958 0.0465 3.0622);
+  --ring: oklch(0.7766 0.0861 15.5812);
+  --chart-1: oklch(0.7766 0.0861 15.5812);
+  --chart-2: oklch(0.8248 0.0291 318.6845);
+  --chart-3: oklch(0.8568 0.0388 355.2216);
+  --chart-4: oklch(0.8925 0.0497 16.5865);
+  --chart-5: oklch(0.9176 0.0345 42.6981);
+  --sidebar: oklch(0.2507 0.0241 5.7160);
+  --sidebar-foreground: oklch(0.9449 0.0221 63.2017);
+  --sidebar-primary: oklch(0.7766 0.0861 15.5812);
+  --sidebar-primary-foreground: oklch(0.3958 0.0465 3.0622);
+  --sidebar-accent: oklch(0.3958 0.0465 3.0622);
+  --sidebar-accent-foreground: oklch(0.9449 0.0221 63.2017);
+  --sidebar-border: oklch(0.3958 0.0465 3.0622);
+  --sidebar-ring: oklch(0.7766 0.0861 15.5812);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --radius: 1.0rem;
+  --font-sans: Inter;
+  --font-serif: Lora;
+  --font-mono: Fira Code;
+  --shadow-color: #000000;
+  --shadow-opacity: 0.2;
+  --shadow-blur: 8px;
+  --shadow-spread: -2px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: 0px;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.10);
+  --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.10);
+  --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0.20), 0px 1px 2px -3px hsl(0 0% 0% / 0.20);
+  --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0.20), 0px 1px 2px -3px hsl(0 0% 0% / 0.20);
+  --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0.20), 0px 2px 4px -3px hsl(0 0% 0% / 0.20);
+  --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0.20), 0px 4px 6px -3px hsl(0 0% 0% / 0.20);
+  --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.20), 0px 8px 10px -3px hsl(0 0% 0% / 0.20);
+  --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.50);
 }
 
 @layer base {
@@ -118,5 +185,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
   }
 }
